--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "typescript": "^5.3.0"
   },
   "dependencies": {
+    "@google/genai": "^1.30.0",
     "@parallelo/sales-engine": "workspace:*"
   }
 }
