--- a/apps/human-agent-app/package.json
+++ b/apps/human-agent-app/package.json
@@ -13,7 +13,9 @@
         "@supabase/supabase-js": "^2.87.3",
         "pinia": "^2.1.7",
         "vue": "^3.4.0",
-        "vue-router": "^4.2.5"
+        "vue-router": "^4.2.5",
+        "workbox-precaching": "^7.0.0",
+        "workbox-window": "^7.0.0"
     },
     "devDependencies": {
         "@types/node": "^20.10.4",
@@ -23,7 +25,7 @@
         "tailwindcss": "^3.4.0",
         "typescript": "~5.6.0",
         "vite": "^5.0.10",
-        "vite-plugin-pwa": "^0.17.4",
+        "vite-plugin-pwa": "^0.21.1",
         "vue-tsc": "^2.0.0"
     }
 }
