--- a/packages/sales-engine/package.json
+++ b/packages/sales-engine/package.json
@@ -72,6 +72,9 @@
     }
   },
   "dependencies": {
-    "assemblyai": "^4.19.0"
+    "@google/genai": "^1.34.0",
+    "@supabase/supabase-js": "^2.89.0",
+    "assemblyai": "^4.19.0",
+    "dotenv": "^17.2.3"
   }
 }
