--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "typecheck": "pnpm -r typecheck",
     "dev": "pnpm -r dev",
     "seed:kb": "npx tsx scripts/seed-knowledge-base.ts",
+    "manage:stores": "npx tsx scripts/manage-file-search-stores.ts",
+    "sync:gemini": "npx tsx scripts/sync-knowledge-to-gemini.ts",
+    "query:kb": "npx tsx scripts/query-knowledge-base.ts",
     "supabase:dev": "pnpm build:supabase && supabase functions serve --no-verify-jwt",
     "supabase:deploy": "pnpm build:supabase && supabase functions deploy"
   },
