--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,11 @@ supabase/functions/.env
 scripts/data/wati/
 scripts/data/batch_output/
 scripts/data/
+
+# BMAD
+.agent/
+.claude/
+.gemini/
+.opencode/
+.windsurf/
+_bmad/
