Admin views: Follow-ups; State Machines; Clients

--- a/apps/human-agent-app/.env.production
+++ b/apps/human-agent-app/.env.production
@@ -1,3 +1,6 @@
 VITE_API_BASE_URL=https://rddcxuymsyoovwgbawja.supabase.co/functions/v1
 VITE_SUPABASE_URL=https://rddcxuymsyoovwgbawja.supabase.co
 VITE_SUPABASE_ANON_KEY=sb_publishable_x4mRrqNslBtTdNv-5CWvSw_nT-XX-Vo
+VITE_META_APP_ID=2060088928108142
+VITE_META_CONFIG_ID=1014243100558218
+VITE_TEMPLATES_PREFIX=agente_
