--- a/apps/human-agent-app/package.json
+++ b/apps/human-agent-app/package.json
@@ -19,12 +19,13 @@
     },
     "devDependencies": {
         "@types/node": "^20.10.4",
-        "@vitejs/plugin-vue": "^5.0.0",
+        "@vitejs/plugin-basic-ssl": "^2.1.4",
+        "@vitejs/plugin-vue": "^6.0.0",
         "autoprefixer": "^10.4.16",
         "postcss": "^8.4.32",
         "tailwindcss": "^3.4.0",
         "typescript": "~5.6.0",
-        "vite": "^5.0.10",
+        "vite": "^6.0.0",
         "vite-plugin-pwa": "^0.21.1",
         "vue-tsc": "^2.0.0"
     }
